--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cache": "^1.1.1",
-    "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
@@ -33,7 +32,6 @@
     "stylelint": "^10.0.1"
   },
   "dependencies": {
-    "gulp-concat": "^2.6.1",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-concat": "^2.6.1"
   }
 }
